--- a/baby_s/src/css/App.css
+++ b/baby_s/src/css/App.css
@@ -1,3 +1,15 @@
+/* .App {
+  text-align: center;
+  background-color: black;
+}
+
+section.AppNav
+{
+  width: 100%;
+  height: 40px;
+  background-color: rgb(62, 62, 62);
+}
+
 body {
     font-family: system-ui;
     background: white;
@@ -18,14 +30,11 @@ body {
   
   section>p
   {
-  /*   background: gray; */
     display: inline-block;
-  /*   float: left; */
     width: 60%;
     height: 90%;
     margin:10px;
     vertical-align: top;
-  /*   text-align: center; */
   }
   
   section>p+p
@@ -41,12 +50,10 @@ body {
   {
     background: red;
     display: inline-block;
-  /*   float: rigth; */
     margin:10px;
     width: 30%;
     height: 90%;
     border: 3px solid #ddd;
-  /*   vertical-align: botton; */
   }
   
   .intro
@@ -60,7 +67,7 @@ body {
   {
     color: red;
     text-align: center;
-  }
+  } */
   
   /* section label
   {
