--- a/baby_s/src/css/Survey.css
+++ b/baby_s/src/css/Survey.css
@@ -1,9 +1,9 @@
-/* .App {
+.SurveyApp {
   text-align: center;
   background-color: black;
 }
 
-section.AppNav
+section.SurveyAppNav
 {
   width: 100%;
   height: 40px;
@@ -22,7 +22,7 @@ body {
   {
     border: 5px solid black;
     background: rgb(96, 108, 221);
-    height: 300px;
+    min-height: 300px;
     width:90%;
     padding: 15px;
     display: inline-block; 
@@ -37,15 +37,42 @@ body {
     vertical-align: top;
   }
   
-  section>p+p
+  /* section>p+p
   {
     background: red;
     display: inline-block;
     width: 35%;
     height: 90%;
     vertical-align: top;
+  } */
+
+  .space_div
+  {
+    width: 100px;
+    background-color: red;
   }
-  
+
+  .survey_left
+  {
+    display: inline-block;
+    width: 40%;
+    height: 20%;
+    text-align: right;
+    vertical-align: top;
+    margin-bottom: 20px;
+    margin-right: 3%;
+  }
+
+  .survey_rigth
+  {
+    display: inline-block;
+    width: 40%;
+    height: 20%;
+    text-align: left;
+    vertical-align: top;
+    margin-bottom: 20px;
+  }
+
   section>p+img
   {
     background: red;
@@ -63,11 +90,29 @@ body {
     margin:  15px;
   }
   
-  h1
+  .Surveyh1
   {
     color: red;
     text-align: center;
-  } */
+  }
+
+  .survey_bottom
+  {
+    width: 75px;
+    height: 25px;
+    display: inline-block;
+    margin: 5px;
+  }
+
+  .survey_error
+  {
+    margin-left: 10%;
+    width: 80%;
+    padding: 2%;
+    border: 2px solid red;
+    background-color: rgb(195, 124, 124);
+    color: rgb(107, 2, 2);
+  }
   
   /* section label
   {
