--- a/baby_s/src/css/Intro.css
+++ b/baby_s/src/css/Intro.css
@@ -1,16 +1,20 @@
-/* .ControlB
+.controlBB
 {
-    width: 60%;
-    margin-left: 20%;
+    width: 80%;
+    margin-left: 10%;
     height: 100%;
-} */
+    background-color: transparent;
+}
 
 .block_intro
 {
     border: 2px solid black;
+    border-radius: 15px;
     padding:2%;
-    width: 96%;
-    margin-bottom: 15px;
+    width: 80%;
+    margin-left: 10%;
+    margin-bottom: 25px;
+    background-color: white;
 }
 
 .block_intro p
@@ -21,10 +25,12 @@
 
 .link_intro
 {
-    width: 96%;
+    width: 80%;
+    margin-left: 20%;
     /* padding: 2%; */
     /* border: 2px solid black; */
     height: 20%;
+    display: flex;
 }
 
 .link_intro img {
@@ -33,15 +39,99 @@
     height: 70%;
     width: auto;
     display: inline-block; 
-
   }
+
+.intro_res
+{
+    align-items: left;
+    margin-left: 10%;
+}
+
+.intro_sur
+{
+    align-items: right;
+    margin-left: 8%;
+}
 
 .link_intro .intro_navigator
 {
-    width: 60%;
+    width: 40%;
     max-height: 100px;
+    
     
     display: inline-block; 
     text-align: middle;
     align-items: center;
+}
+
+
+.F_intro_img
+{
+    /* background-color: red; */
+    width: 80%;
+    margin-left:12%;
+    margin-top:2%;
+    margin-bottom:15px;
+    
+    max-height: 30%;
+    min-height: 30%;
+}
+
+.F_intro_imgF
+{
+    width: auto !important; /*override the width below*/
+    width: 100%;
+    max-width: 678px;
+}
+
+.F_titleF
+{
+    font-family:"Regular";
+    font-size: 64px ;
+}
+
+
+.block_intro_F
+{
+    display: flex;
+    border: 2px solid black;
+    border-radius: 15px;
+    padding:2%;
+    width: 80%;
+    margin-left: 10%;
+    margin-bottom: 25px;
+    background-color: white;
+}
+
+.block_intro_F2
+{
+    width: 40%;
+    margin-right: 5%;
+    margin-left: 5%;
+    background-color: white;
+    border: 2px  solid black;
+    border-radius:  25px;
+    /* display: flex; */
+}
+
+.intro_resF
+{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    max-width: 90%;
+    max-height: 45%;
+}
+
+.intro_imgFF
+{
+    padding-bottom: 0px;
+    max-width: 50%;
+    height: 50%;
+}
+
+.image_exit_F
+{
+    width: 10%;
+    height: 10%px;
+    padding-bottom: 100px;
 }
