--- a/baby_s/src/App.css
+++ b/baby_s/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
   background-color: black;
 }
@@ -12,7 +12,7 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
   background-color: #282c34;
