--- a/baby_s/src/Extra/Nav.css
+++ b/baby_s/src/Extra/Nav.css
@@ -52,7 +52,7 @@
    width:80%;
    height: 100%;
    margin-left: 10%;
-   background-color: rgba(71, 71, 90, 0.5);
+   background-color: rgba(255, 255, 255);
    
 }
 
