--- a/baby_s/src/ExtraCss/login.css
+++ b/baby_s/src/ExtraCss/login.css
@@ -58,6 +58,7 @@
 
 .button-24:hover,
 .button-24:active {
+  /* background-color: initial; */
   background-color: initial;
   background-position: 0 0;
   color: #FF4742;
@@ -67,3 +68,47 @@
   opacity: .5;
 }
 
+
+
+
+
+.button-25 {
+    margin-right:12px;
+    background: #42b0ff;
+    border: 1px solid #42b0ff;
+    border-radius: 6px;
+    box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
+    font-size: 16px;
+    font-weight: 800;
+    line-height: 16px;
+    min-height: 40px;
+    outline: 0;
+    padding: 12px 14px;
+    text-align: center;
+    text-rendering: geometricprecision;
+    text-transform: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+}
+
+.button-25:hover,
+.button-25:active {
+  /* background-color: initial; */
+  /* background-color: initial; */
+    background-position: 0 0;
+    min-height: 50px;
+    font-size: 19px;
+    font-weight: 830;
+  /* color: #FF4742; */
+}
+
+.button-25:active {
+  opacity: .5;
+}
