--- a/baby_s/src/css/AppC.css
+++ b/baby_s/src/css/AppC.css
@@ -2,19 +2,19 @@
 {
     text-align: center;
     /* background-color: aqua; */
-    background-image: url("../image/background/Babycontrol1.png") ;
+    background-image: url("../image/background/Babycontrol2.png") ;
     /* background-size: contain; */
     /* background-size: cover; */
-    background-size: 100% 100%;
+    /* background-size: 100% 100%; */
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     height:100%;
     min-height: 900px;   
 }
 
 @media only screen and (max-width: 767px) {
     .App {
-        background: url("../image/background/Babycontrol1.png") ;
+        background: url("../image/background/Babycontrol2.png") ;
     }
   }
   
