--- a/baby_s/src/Extra/Nav.css
+++ b/baby_s/src/Extra/Nav.css
@@ -1,16 +1,75 @@
 .Nav
 {
-    width: 100%;
-    height: 40px;
+    /* width: 100%; */
+    min-height: 40px;
+    max-height: 40px;
     background-color: rgb(62, 62, 62);
     padding: 5px;
+    padding-bottom: 10px;
     margin: 0px;
-    display: flex;
+    /* display: flex; */
     /* justify-content: start; */
     /* align-items: center */
 }
 
+.NavR
+{
+    /* justify-content: flex-start; */
+    float: left;
+}
+
+.NavL
+{
+    /* display:flex;
+    justify-content: flex-end; */
+    float: right;
+}
+
+.NavImgR
+{
+    width: 90%;
+    height: 90%;
+    max-width: 42px;
+    max-height: 42px;
+
+    margin-top: 3px;
+    margin-bottom: 3px;
+    vertical-align: top;
+    margin-left: 7px;
+    margin-right: 7px;
+}
+
 .NavImg
+{
+    width: 90%;
+    height: 90%;
+    max-width: 40px;
+    max-height: 40px;
+
+    margin-top: 3px;
+    margin-bottom: 3px;
+    vertical-align: top;
+    margin-left: 7px;
+    margin-right: 7px;
+}
+
+/* .NavR .NavImg:hover
+{
+    margin-top: 0px;
+    border: 5px solid Green;
+    border-radius: 50%;
+} */
+
+.NavL .NavImg:hover
+{
+    margin-top: 0px;
+    border: 5px solid red;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+
+/* .NavImg
 {
     max-width: 90%;
     max-height: 90%;
@@ -20,8 +79,6 @@
     vertical-align: top;
     margin-left: 7px;
     margin-right: 7px;
-    /* 
-    display: inline-block; */
 }
 
 
@@ -44,15 +101,26 @@
     display: flex;
     justify-content: flex-end;
 }
+ */
+
+
+/* 
+    ###########################################
+    ###########################################
+    ###########################################
+*/
 
 .Timer
 {
-   border: 30px groove black;
-   border-radius: 25%;
+   /* border: 30px groove black; */
+   padding: 30px;
+   border-radius: 25px;
    width:80%;
    height: 100%;
    margin-left: 10%;
    background-color: rgba(255, 255, 255);
+   box-shadow: 0 4px 8px 0 rgb(25, 25, 25), 0 6px 20px 0 rgb(0, 0, 0);
+   /* background-image: linear-gradient(to bottom right, rgb(0, 145, 255), rgba(0, 145, 255, 0.397)); */
    
 }
 
@@ -60,46 +128,147 @@
 {
     font-family: "Fantasy";
     font-size: 45px;
+    /* color: rgba(234, 67, 67); */
+    color: rgb(35, 35, 199);
 }
 
-.Timer_control0
+.Timer_block
 {
     display: inline-block;
-    /* width: 45%; */
-    padding-left: 15px;
-    font-family: "Fantasy";
-    color: rgb(0, 0, 0);
-    font-size: 60px;
+    justify-content: center;
+    /* background-color: black; */
+    
+    width: 200px;
+    height: 200px;
+    margin-right: 10px;
+    margin-bottom: 30px;
+}
+
+.Timer_text
+{
+    /* border: 2px red solid; */
+    width: 85%;
+    height: 90%;
+    display: inline-block;
+    /* background-color: black; */
+    background-image: linear-gradient(180deg, 
+            rgb(165, 164, 164) 50%, rgb(112, 112, 112) 50%);
+}
+
+.time_Sp3
+{
+    visibility: hidden;
+}
+
+.Timer_separation
+{
+    display: inline-block;
+    width: 5%;
+    /* margin-right: 2%; */
+    height: 100%;
+    /* border: 2px solid aqua; */
+    margin-top: 9%;
+    vertical-align: top;
+    text-align: middle;
+    margin-left: 3px;
+    margin-right: 4px;
+    font-size: 100px;
+}
+
+.Timer_h1
+{
+    font-size: 130px;
+    margin-top: 0px;
+    margin-bottom: 0;
+    vertical-align: top;
+    
+    /* color: rgba(234, 67, 67, 0.84); */
+    color: rgb(35, 35, 199);
+    
+}
+
+.Timer_h3
+{
+    margin-top: 0;
     margin-bottom: 0px;
+    padding-top: 0px;
+    vertical-align: top;
+    /* color: rgb(234, 67, 67); */
+    color: rgb(35, 35, 199);
+    font-weight: bolder;
+    line-height: 0px;
 }
 
-.Timer_control1
-{
-    display: inline-block;
-    /* width: 45%; */
-    padding-left: 15px;
-    font-family: "Fantasy";
-    color: rgb(0, 0, 0);
-    font-size: 60px;
-    margin-bottom: 0px;
-}
 
-.Timer_control2
-{
-    display: inline-block;
-    /* width: 45%; */
-    padding-left: 15px;
-    font-family: "Fantasy";
-    color: rgb(0, 0, 0);
-    font-size: 30px;
-}
 
-.Timer_control3
-{
-    display: inline-block;
-    /* width: 45%; */
-    padding-left: 15px;
-    font-family: "Fantasy";
-    color: rgb(0, 0, 0);
-    font-size: 30px;
+
+@media only screen and (max-width: 767px) {
+
+    .Timer
+    {
+        /* border: 20px groove black; */
+        padding: 20px;
+        border-radius: 25px;
+        width: 85%;
+        height: 100%;
+        margin-left: 5%;
+    }
+
+    .Timer_title
+    {
+        font-family: "Fantasy";
+        font-size: 35px;
+    }
+
+    .Timer_block
+    {
+        display: inline-block;
+        justify-content: center;
+        /* background-color: black; */
+        
+        width: 150px;
+        height: 150px;
+        margin-right: 5px;
+        margin-bottom: 30px;
+    }
+
+    .Timer_text
+    {
+        /* border: 2px red solid; */
+        width: 85%;
+        height: 90%;
+        display: inline-block;
+    }
+
+    .time_Sp1
+    {
+        visibility: hidden;
+    }
+    .time_Sp3
+    {
+        visibility: hidden;
+    }
+
+    .Timer_separation
+    {
+        display: inline-block;
+        width: 5%;
+        /* margin-right: 2%; */
+        height: 100%;
+        /* border: 2px solid aqua; */
+        vertical-align: top;
+        text-align: middle;
+        margin-left: 3px;
+        margin-right: 4px;
+        font-size: 100px;
+    }
+
+    .Timer_h1
+    {
+        font-size: 85px;
+        margin-top: 5%;
+        margin-bottom: 0px;
+        vertical-align: top;
+    }
+
 }
