--- a/baby_s/src/css/AppC.css
+++ b/baby_s/src/css/AppC.css
@@ -34,7 +34,21 @@
     /* margin-left: 5%; */
     height: 100%;
     
-    
     /* padding: 0px;
     margin: 0px; */
 }
+
+.image_footer
+{
+    width: 110px;
+    height: 110px;
+    margin-bottom: 15px;
+}
+.image_footer:hover
+{
+    cursor: pointer;
+}
+
+
+
+
