--- a/baby_s/src/css/Intro.css
+++ b/baby_s/src/css/Intro.css
@@ -149,6 +149,7 @@
     /* border: 2px solid black ; */
     /* display: inline-block; */
     display: flex;
+    margin-left: 2.5%;
     padding : 0px;
 }
 
