--- a/baby_s/src/css/chart.css
+++ b/baby_s/src/css/chart.css
@@ -2,7 +2,8 @@
 .controlBC
 {
     background-color: white;
-    width: 100%;
+    width: 80%;
+    margin-left: 10%;
     padding-bottom: 25px;
     padding-top: 25px;
     padding-left: 15px;
@@ -10,3 +11,17 @@
     border-radius: 50%;
 }
 
+@media only screen and (max-width: 767px) {
+    .controlBC
+    {
+        background-color: white;
+        width: 100%;
+        margin-left: 0%;
+        padding-left: 0px;
+        padding-right: 0px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        border-radius: 100%;
+    }
+
+}
