--- a/baby_s/src/css/AppC.css
+++ b/baby_s/src/css/AppC.css
@@ -1,20 +1,29 @@
 .App 
 {
     text-align: center;
-    /* background-color: aqua; */
-    background-image: url("../image/background/Babycontrol2.png") ;
+
+
+    /* background-image: url("../image/background/Babycontrol2.png") ;
+    background-position: center;
+    background-repeat: repeat; */
+
+
     /* background-size: contain; */
     /* background-size: cover; */
     /* background-size: 100% 100%; */
-    background-position: center;
-    background-repeat: repeat;
+    
     height:100%;
     min-height: 900px;   
+
+    background-image: url("../image/background/animal-zoo.png") ;
+    background-position: center;
+    background-repeat: repeat;
+
 }
 
 @media only screen and (max-width: 767px) {
     .App {
-        background: url("../image/background/Babycontrol2.png") ;
+        /* background: url("../image/background/Babycontrol2.png") ; */
     }
   }
   
