--- a/baby_s/src/css/calendar.css
+++ b/baby_s/src/css/calendar.css
@@ -17,6 +17,12 @@
     /* background-color: black; */
 }
 
+.bar_spX
+{
+        
+    background-color: white;
+}
+
 .bar_cont
 {
     width: 95%;
@@ -25,8 +31,8 @@
 
 .bar_img
 {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
 }
 
 .bar_title
@@ -85,8 +91,8 @@
 
     .bar_img
     {
-        width: 50px;
-        height: 50px;
+        width: 55px;
+        height: 55px;
         background-color: white;
         border-radius: 50%;
         margin-bottom: 10px;;
@@ -104,6 +110,9 @@
         text-align: left;
         margin-top: 20px;
         margin-left: 5px ;
+        margin-right: 10px ;
+        background-color: white;
+        min-width: 50px;
     }
 
     
