--- a/baby_s/src/ExtraCss/login.css
+++ b/baby_s/src/ExtraCss/login.css
@@ -113,3 +113,15 @@
 .button-25:active {
   opacity: .5;
 }
+
+
+@media only screen and (max-width: 767px) {
+
+  .login_space
+  {
+      margin-bottom: 25px;
+  }
+
+}
+
+
