--- a/baby_s/src/css/Survey.css
+++ b/baby_s/src/css/Survey.css
@@ -177,6 +177,8 @@ body {
     display: inline-block; 
 }
 
+
+
 @media only screen and (max-width: 767px) {
   .title_mess {
       width: 50%;
@@ -233,3 +235,46 @@ body {
   }
   
 }
+
+
+
+ /* The Modal (background) */
+
+.modalContent {
+  padding-top: 25%;
+  font-size: 14px;
+  color: #2c3e50;
+  text-align: center;
+}
+
+.darkBG {
+  background-color: rgba(0, 0, 0, 0.2);
+  width: 100%;
+  height: 100vh;
+  z-index: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: fixed;
+}
+
+.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.modal {
+  width: 300px;
+  height: 170px;
+  background: white;
+  color: white;
+  z-index: 10;
+  border-radius: 16px;
+  box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.04);
+}
+
+
+
+
