--- a/baby_s/src/css/calendar.css
+++ b/baby_s/src/css/calendar.css
@@ -72,7 +72,9 @@
         /* max-width: 18%;
         display: inline-block; */
         float: none;
-        width: 100%;
+        width: 50%;
+        
+        background-color: white ;
         /* display: inline-block; */
         /* height: 50px; */
         /* background-color: black; */
