--- a/baby_s/src/css/standard_p.css
+++ b/baby_s/src/css/standard_p.css
@@ -32,7 +32,7 @@
     /* display: inline-block; */
     /* float: left; */
     display: flex;
-    width: 20%;
+    width: 18%;
     border: 2px solid black;
     
     align-items: center;
@@ -43,16 +43,36 @@
 {
     /* float: left; */
     display: flex;
-    width: 79%;
+    width: 70%;
     border: 2px solid black;
     align-items: center;
     justify-content: center;
-    
+}
+
+.standard_img
+{
+    /* float: left; */
+    display: flex;
+    width: 15%;
+    border: 2px solid black;
+    align-items: center;
+    justify-content: center;
+}
+
+.standard_symbolF
+{
+    color: rgb(251, 69, 172);
+}
+
+.standard_symbolM
+{
+    color: #0000FF;
 }
 
 .st_primary
 {
-    background-color: rgb(13, 158, 20);
+    /* background-color: rgb(13, 158, 20); */
+    background-color: rgb(46, 204, 54);
 }
 
 
@@ -64,22 +84,25 @@
 
 .st_third
 {
-    background-color: rgb(83, 90, 230);
+    /* background-color: rgb(83, 90, 230); */
+    background-color: rgb(108, 114, 222);
 }
 
 .st_fourth
 {
-    background-color: rgb(222, 53, 228);
+    background-color: rgb(196, 53, 228);
 }
 
 .st_fifth
 {
-    background-color: rgb(255, 119, 0);
+    /* background-color: rgb(255, 119, 0); */
+    background-color: rgb(248, 152, 68);
 }
 
 .st_sixth
 {
-    background-color: rgb(255, 119, 0);
+    /* background-color: rgb(255, 119, 0); */
+    background-color: rgb(248, 152, 68);
 }
 
 
